sna: Avoid readback inplace if the target is unmappable

We have to use the tiling indirect path, or else fail.

References: https://bugs.freedesktop.org/show_bug.cgi?id=54808
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>